# ssl-bad-exposure-identification

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: embed.yaml  exposure_multiscale.yaml  inference.yaml  train.yaml
data/: bad_WCSCAL_exp_dr10_decam.txt  bad_WCSCAL_exp_dr9_decam.txt  bad_expid.txt  decam_alex_expnum_not_in_dr10.npy  decam_dr10_RZ_bad_exp.npy  decam_dr10_alex_bad_exp.npy  decam_dr10_bad_WCSCAL_fname_expnum.txt  decam_dr10_bad_exp_all.csv  decam_dr10_bad_exp_all_with_fname.csv  decam_dr10_bad_exp_ooi.csv  decam_dr10_good_exp.csv  decam_dr10_ooi_oki_images_exist.csv  missing_files_exp_dr10_decam.txt
docs/: multiscale-exposure-identification-plan.md
nb/: analysis_classification_result.py  analyze_viz.ipynb  analyze_viz.py  build_dataset.ipynb  build_dataset.py  build_train_test_dataset.ipynb  build_train_test_dataset.py  clustering.ipynb  clustering.py  dr11_inference.ipynb  dr11_inference.py  dr11_postproc.ipynb  dr11_postproc.py  dr11_proc.ipynb  dr11_proc.py  multiscale_eval.py  plot_sample_image.ipynb  plot_sample_image.py  read_vi_results.ipynb  read_vi_results.py  revision.py  sample_dataset.py  train_knn.py
src/: config.py  config.yaml  decam_dataset.py  decam_focalplane.py  decam_info.py  decam_postage_stamps.py  desi_template_perlmutter_module.slurm  distributed.py  do_analysis_viz.py  finetune_model.py  inference.py  master_eval.py  parallel_eval.py  read_image.py  run-dist-job.sh  util.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_dataset.py  test_decam_info.py  test_info.py  (+13 more)
(+18 files in other folders)
